# secrets-scanner

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/secretscanner/: __init__.py  cli.py  rules.py  scanner.py
tests/: test_cli.py  test_scanner.py
